# server/src/controllers/room.controller.js
@@ -25,7 +25,21 @@ const getRooms = async (req, res) => {
   /* 	#swagger.tags = ['Rooms']
        #swagger.description = 'Get rooms' */
   try {
-    const rooms = await Room.find().populate("members createdBy admin", { password: 0, confirmPassword: 0, __v: 0 });
+    const rooms = await Room.find({}).populate("members createdBy admin", { password: 0, confirmPassword: 0, __v: 0 });
+    res.status(200).send(rooms);
+  } catch (error) {
+    if (error instanceof HttpError) {
+      return res.status(error.statusCode).send({ error: error.message });
+    }
+    res.status(500).send(error);
+  }
+};
+
+const getRoomsByUserId = async (req, res) => {
+  /* 	#swagger.tags = ['Rooms']
+       #swagger.description = 'Get rooms by user id' */
+  try {
+    const rooms = await Room.find({members:req.params.id}).populate("members createdBy admin", { password: 0, confirmPassword: 0, __v: 0 });
     res.status(200).send(rooms);
   } catch (error) {
     if (error instanceof HttpError) {
@@ -44,7 +58,7 @@ const updateRoom = async (req, res) => {
       schema: { $ref: '#/definitions/Room' }
 } */
   try {
-    await Room.findByIdAndUpdate(req.params.id, req.body);
+    await Room.findByIdAndUpdate({member:req.params.id,_id:req.params.roomId}, req.body);
     res.status(200).send("Room updated successfully");
   } catch (error) {
     if (error instanceof HttpError) {
@@ -58,7 +72,7 @@ const deleteRoom = async (req, res) => {
   /* 	#swagger.tags = ['Rooms']
        #swagger.description = 'Delete a room.' */
   try {
-    await Room.findByIdAndDelete(req.params.id);
+    await Room.findByIdAndDelete(req.params.roomId);
     res.status(200).send("Room deleted successfully");
   } catch (error) {
     if (error instanceof HttpError) {
@@ -68,4 +82,4 @@ const deleteRoom = async (req, res) => {
   }
 };
 
-module.exports = { createRoom, getRooms, updateRoom, deleteRoom };
+module.exports = { createRoom, getRooms,getRoomsByUserId, updateRoom, deleteRoom };
