# server/swagger-output.json
@@ -340,6 +340,20 @@
       }
     },
     "/api/rooms": {
+      "get": {
+        "tags": [
+          "Rooms"
+        ],
+        "description": "Get rooms",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "post": {
         "tags": [
           "Rooms"
@@ -363,12 +377,22 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/api/users/{id}/rooms": {
       "get": {
         "tags": [
           "Rooms"
         ],
-        "description": "Get rooms",
+        "description": "Get rooms by user id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -530,7 +554,7 @@
         },
         "dateOfBirth": {
           "type": "string",
-          "example": "Wed Feb 19 2025 13:38:52 GMT+0530 (India Standard Time)"
+          "example": "Fri Feb 21 2025 13:32:20 GMT+0530 (India Standard Time)"
         }
       }
     },
